--- a/biodata/index.html
+++ b/biodata/index.html
@@ -55,7 +55,7 @@
 				<div id="sosmed">
 					<div class="in-sosmed">
 						<img src="ig.png" style="height: 2em; margin-right:3%">
-						<h3>Instagram</h3>
+						<a href="https://www.instagram.com/_fahrul.s/"><h3>Instagram</h3></a>
 					</div>
 					<div class="in-sosmed">
 						<img src="fb.png" style="height: 2em; margin-right:3%">
