--- a/biodata/index.html
+++ b/biodata/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	
-	<title>Fahrul Setiawan | 20321158</title>
+	<title>Fahrul Setiawan</title>
 </head>
 <body>
 	<div id="header">
