ganti kata kata

--- a/biodata/index.html
+++ b/biodata/index.html
@@ -50,7 +50,7 @@
 			</div>
 			<div class="half">
 				<div class="word">
-					<p style="font-size: 1.7em">  " I'm very interested on UI/UX,  now I started my study and wanted to be a front-end developer "  </p>
+					<p style="font-size: 1.7em">  " I'm very interested in UI/UX, and now I have started my studies with the goal of becoming a front-end developer. "  </p>
 				</div>
 				<div id="sosmed">
 					<div class="in-sosmed">
